; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_metadata_cache.c_InitializeCaches.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_metadata_cache.c_InitializeCaches.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@InitializeCaches.performedInitialization = internal global i32 0, align 4
@MetadataCacheMemoryContext = common dso_local global i32* null, align 8
@CacheMemoryContext = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [27 x i8] c"MetadataCacheMemoryContext\00", align 1
@ALLOCSET_DEFAULT_SIZES = common dso_local global i32 0, align 4
@DistTableCacheHash = common dso_local global i32* null, align 8
@DistShardCacheHash = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @InitializeCaches to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @InitializeCaches() #0 {
  %1 = load i32, i32* @InitializeCaches.performedInitialization, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %26, label %3

3:                                                ; preds = %0
  store i32* null, i32** @MetadataCacheMemoryContext, align 8
  %4 = call i32 (...) @PG_TRY()
  store i32 1, i32* @InitializeCaches.performedInitialization, align 4
  %5 = load i32*, i32** @CacheMemoryContext, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %9

7:                                                ; preds = %3
  %8 = call i32 (...) @CreateCacheMemoryContext()
  br label %9

9:                                                ; preds = %7, %3
  %10 = load i32*, i32** @CacheMemoryContext, align 8
  %11 = load i32, i32* @ALLOCSET_DEFAULT_SIZES, align 4
  %12 = call i32* @AllocSetContextCreate(i32* %10, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %11)
  store i32* %12, i32** @MetadataCacheMemoryContext, align 8
  %13 = call i32 (...) @InitializeDistCache()
  %14 = call i32 (...) @RegisterForeignKeyGraphCacheCallbacks()
  %15 = call i32 (...) @RegisterWorkerNodeCacheCallbacks()
  %16 = call i32 (...) @RegisterLocalGroupIdCacheCallbacks()
  %17 = call i32 (...) @PG_CATCH()
  store i32 0, i32* @InitializeCaches.performedInitialization, align 4
  %18 = load i32*, i32** @MetadataCacheMemoryContext, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %20, label %23

20:                                               ; preds = %9
  %21 = load i32*, i32** @MetadataCacheMemoryContext, align 8
  %22 = call i32 @MemoryContextDelete(i32* %21)
  br label %23

23:                                               ; preds = %20, %9
  store i32* null, i32** @MetadataCacheMemoryContext, align 8
  store i32* null, i32** @DistTableCacheHash, align 8
  store i32* null, i32** @DistShardCacheHash, align 8
  %24 = call i32 (...) @PG_RE_THROW()
  %25 = call i32 (...) @PG_END_TRY()
  br label %26

26:                                               ; preds = %23, %0
  ret void
}

declare dso_local i32 @PG_TRY(...) #1

declare dso_local i32 @CreateCacheMemoryContext(...) #1

declare dso_local i32* @AllocSetContextCreate(i32*, i8*, i32) #1

declare dso_local i32 @InitializeDistCache(...) #1

declare dso_local i32 @RegisterForeignKeyGraphCacheCallbacks(...) #1

declare dso_local i32 @RegisterWorkerNodeCacheCallbacks(...) #1

declare dso_local i32 @RegisterLocalGroupIdCacheCallbacks(...) #1

declare dso_local i32 @PG_CATCH(...) #1

declare dso_local i32 @MemoryContextDelete(i32*) #1

declare dso_local i32 @PG_RE_THROW(...) #1

declare dso_local i32 @PG_END_TRY(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
